<resources>
    //API_KEY
    <string name="google_maps_api_key">AIzaSyCZZMrc0UKTtKbIBxVAKQSk_vjF00MioRQ</string>

    //Other text used in the app
    <string name="home_icon_text">Home Icon</string>
    <string name="home_icon_description">Navigate to your home screen</string>

    <string name="receipts_icon_text">Receipts Icon</string>
    <string name="receipts_icon_description">View and manage your receipts</string>

    <string name="profile_icon_text">Profile Icon</string>
    <string name="profile_icon_description">Access and edit your profile</string>

    <string name="app_name_text">Matatu-Pap \n Admin App</string>
    <string name="greetings_text">Greetings, User</string>

    <string name="add_bus_text">Add Bus into Fleet</string>
    <string name="remove_bus_text">Remove Or Update Bus</string>
    <string name="add_route_text">Add Route</string>
    <string name="change_route_prices_text">Change Route Prices or Name</string>

    <string name="add_new_bus_text">Add New Bus</string>
    <string name="add_new_number_plate_text">Add Number Plate:</string>
    <string name="add_route_start_text">Add Route:</string>
    <string name="add_code_text">Add Bus Code:</string>
    <string name="add_payment_method_text">Choose Payment Method:</string>
    <string name="add_bus_txt">Add Bus</string>
    <string name="stages_between_text">Add Stages Between \n Separate with commas</string>
    <string name="price_per_stage_text">Price Per Stage:</string>
    <string name="changed_price_per_stage_text">Changed Price Per Stage:</string>


    <string name="sacco_sign_up_text">Fleet Sign Up</string>
    <string name="sacco_log_in_text">Fleet Log In</string>
    <string name="sacco_name_text">Fleet Name:</string>
    <string name="sacco_email_text">Fleet Email:</string>
    <string name="password_text">Password:</string>
    <string name="sacco_sign_up_txt">Sign Up:</string>
    <string name="sacco_signup_txt">Don\'t have an Account?  Sign Up</string>
    <string name="sacco_login_txt">Have an Account?  Log In</string>

    <string name="search_bus_text">Search Bus Number Plate</string>
    <string name="bus_plate_text">Tap to Choose Bus Plate:</string>
    <string name="route_name_text">Route Name</string>

    <string name="customer_info_text">Customer Info:</string>
    <string name="edit_password_text">Edit Password</string>

    <string name="confirm_password_text">Confirm Password</string>

    <string name="login_text">Log In</string>
    <string name="sign_up_txt">Sign Up</string>

    <string name="forgot_password_txt">Forgot Password</string>

    <string name="mpesa_payment_text">M-Pesa Payments</string>

    <string name="search_payment_text">Search Payments</string>

    <string name="greeting_text">Greetings, %1$s</string>

    <string name="route_start">Route Start</string>
    <string name="route_end">Route End</string>
    <string name="route_stage">Stage</string>

    <string name="instruction_route_start">Pin Route Start on the Map</string>

    <string name="instruction_route_end">Pin Route End on the Map</string>

    <string name="instruction_route_stage">Pin Atleast 5 Stages on the Map</string>

    <string name="adding_route_instruction_txt">TAP ROUTE START, ROUTE END AND STAGE ABOVE TO PIN LOCATION ON MAP</string>

    <string name="remove_stages_btn_txt">Remove Stage</string>
    <string name="confirm_route_btn_txt">Add Route</string>

    <string name="naming_fragment_instructions">TAP CHANGE ROUTE TO GO BACK AND CHANGE ROUTE. TAP NAME ROUTE TO CONTINUE</string>

    <string name="name_route_btn_txt">Change Route</string>
    <string name="back_to_add_route_btn_txt">Name Route</string>

    <string name="add_route_txt">Add New Route</string>

    <string name="route_start_txt">Name of Route Start:</string>
    <string name="route_start_instruction_txt">name of the route start stage</string>
    <string name="route_end_txt">Name of Route End:</string>
    <string name="route_end_instruction_txt">name of the route end stage</string>
    <string name="route_fair_txt">Add Fare For Route:</string>
    <string name="route_fair_upd_txt">Update Fare For Route:</string>
    <string name="route_fair_instruction_txt">eg. 100</string>
    <string name="add_route_btn_txt">Add Route</string>

    <string name="update_btn_txt">UPDATE</string>

    <string name="update_btn_text">UPDATE BUS</string>
    <string name="update_bus_txt">Update Bus Details</string>

    <string name="update_btn_text_small">Update Bus</string>


    <string name="add_bus_example_txt">eg: KAA 123J</string>
    <string name="add_code_example_txt">eg: 1234</string>

    <string name="bus_plate_txt">Number Plate:</string>
    <string name="choose_route_txt">Choose Route:</string>
    <string name="bus_code_txt">Bus Code:</string>
    <string name="bus_payment_txt">Payment Method:</string>

    <string name="search_route_text">Search Route Name</string>

    <string name="fair_price_text">Fair Price</string>

    <string name="delete_route_warning_text">DELETING THIS ROUTE WILL AFFECT ALL BUSES WITH THIS ROUTE.</string>
    <string name="cancel_delete_route_text">Back</string>

    <string name="sacco_name_instructions">add fleet name</string>
    <string name="sacco_pass_instructions">at-least 6 letters long</string>
    <string name="sacco_email_instructions">eg: fleet@email.com</string>

    <string name="continue_delete_route_text">DELETE</string>

    <string name="update_route_btn_text_small">Update Route Fare</string>
    <string name="update_route_btn_text">UPDATE ROUTE FARE</string>

    <string name="number_of_routes_txt">Routes</string>
    <string name="number_of_buses_txt">Buses</string>

    <string name="edit_info_txt">Edit Account Information</string>
    <string name="add_payment_txt">Add Payment Method</string>

    <string name="add_payment_title">Add Payment</string>
    <string name="payment_name">Name of Payment:</string>
    <string name="payment_name_instructions">eg. payment 1</string>
    <string name="buy_goods_number">Add M-Pesa Payment Details:</string>
    <string name="buy_goods_number_instructions">eg. 0712345678</string>
    <string name="add_payment_btn_txt">ADD PAYMENT</string>

    <string name="performance_text">Performance Tracker</string>
    <string name="search_payments_text">Search Payments</string>
    <string name="transaction_id_text">Transaction Id</string>
    <string name="payment_method_text">Payment Type</string>
    <string name="bus_code_text">Bus Code</string>
    <string name="amount_text">Amount</string>

    <string name="bus_performance_text">Bus Performance</string>
    <string name="route_performance_text">Route Performance</string>
    <string name="fleet_performance_text">Fleet Performance</string>

    <string name="bus_trips_text">Add Bus Trips</string>
    <string name="cost_trips_text">Add Bus Expenses</string>
    <string name="route_compare_text">Compare Buses</string>
    <string name="bus_compare_text">Compare Routes</string>

    <string name="add_bus_trip_text">Add Bus Trip</string>
    <string name="add_bus_trip_number_plate_text">Choose Bus Number Plate:</string>
    <string name="add_trip_amount_text">Enter No of Trips:</string>
    <string name="add_bus_trip_txt">Add Trips</string>
    <string name="add_trip_example_txt">e.g 5</string>
    <string name="add_trip_explanation_txt">Add Daily Number of Trips for each Bus to allow for tracking of fleet performance</string>
    <string name="add_trip_date_txt">Enter Trip Date:</string>
    <string name="add_trip_date_example_txt">e.g 23/09/2025</string>

    <string name="add_expense_explanation_txt">Add Monthly Expenses for each Bus to allow for tracking of fleet performance</string>
    <string name="add_bus_exp_text">Add Bus Expenses</string>
    <string name="add_exp_date_text">Choose Month:</string>
    <string name="add_exp_amount_txt">Total Expenses:</string>
    <string name="add_exp_example_txt">e.g 5000</string>
    <string name="add_bus_exp_txt">Add Expenses</string>


    <string name="compare_busses">Compare Buses</string>
    <string name="bus_plate_check_text">Check two Buses</string>

    <string name="choose_bus_1_txt">Bus 1</string>
    <string name="choose_bus_2_txt">Bus 2</string>

    <string name="compare_buses_txt">Compare Buses</string>
    <string name="compare_routes">Compare Routes</string>

    <string name="route_name_txt">Tap to Choose Route</string>

    <string name="choose_route_1_txt">Route 1</string>
    <string name="choose_route_2_txt">Route 2</string>

    <string name="compare_routes_txt">Compare Routes</string>

    <string name="choose_time_period_txt">Choose Time Period</string>

    <string name="bus_comp_txt">Busses Comparison</string>

    <string name="stat_1">Total Trips</string>
    <string name="stat_2">Total Income</string>
    <string name="stat_3">Total Expenses</string>
    <string name="stat_4">Net Profit</string>
    <string name="stat_5">Profit Margin</string>
    <string name="stat_6">Trips/Day</string>
    <string name="stat_7">Performance Ratio</string>

    <string name="stat_1_1">Stat 1</string>
    <string name="stat_2_1">Stat 2</string>

    <string name="routes_comp_txt">Routes Comparison</string>

    <string name="stat_8">Route Revenue</string>
    <string name="stat_9">Route Expense</string>
    <string name="stat_10">Profit Margin</string>
    <string name="stat_11">Trip Volume</string>
    <string name="stat_12">Revenue per Bus</string>

    <string name="stat1">Total Revenue</string>
    <string name="stat2">Total Expense</string>
    <string name="stat3">Profit Margin</string>
    <string name="stat4">KES 0.0</string>
    <string name="stat5">0.0%</string>
    <string name="bus_plate_inst_text">Tap to Choose Bus Plate to Check Performance:</string>
    <string name="btn_check_stats">Check Bus Performance</string>

    <string name="route_name_inst_text">Tbtn_check_statsap to Choose Route Name to Check Performance:</string>
    <string name="btn_check_route_stats">Check Route Performance</string>

    <string name="no_of_routes_txt">Active Routes</string>
    <string name="n0_of_buses_txt">Active Buses</string>

    <string name="txt_check_bus_stats">Total Bus Performance</string>
    <string name="txt_check_route_stats">Total Route Performance</string>

    <string name="txt_profit_mrgn">Profit Margin</string>
</resources>
