<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#9D00FF">


    <LinearLayout
        android:id="@+id/white_line_design"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/home_icon_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="#9D00FF"
                android:contentDescription="@string/home_icon_description"
                android:padding="20dp"
                android:src="@drawable/home_icon"
                app:tint="#FFFFFF"/> <!-- Content description added -->

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/receipts_icon_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/receipts_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#9D00FF"
                android:contentDescription="@string/receipts_icon_description"
                android:padding="20dp"
                android:src="@drawable/receipt_icon" /> <!-- Content description added -->

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_icon_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9D00FF"
                android:contentDescription="@string/profile_icon_description"
                android:padding="20dp"
                android:src="@drawable/person_icon" /> <!-- Content description added -->

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="#9D00FF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_nav_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:cardBackgroundColor="#9D00FF">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_margin="15dp"
                android:padding="20dp"
                app:srcCompat="@drawable/back_icon" />

            <ImageView
                android:id="@+id/logo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="13dp"
                android:src="@drawable/logo" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fromCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/bus_performance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/fleet_performance_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#fff"
            android:textSize="39sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/stats_icons"
            android:layout_width="448dp"
            android:layout_height="130dp"
            android:elevation="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/questions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maps_card">


            <androidx.cardview.widget.CardView
                android:id="@+id/total_rev_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#9D00FF"
                    android:gravity="center"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/text_total_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/total_revenue_amnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat4"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/end_route_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="#9D00FF"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/text_total_exp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat2"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat4"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/stage_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="#9D00FF"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/text_total_mrgin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat3"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/stage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/stat5"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:gravity="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#9D00FF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/routes_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/route_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/no_of_routes_txt"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#9D00FF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/buses_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="TextView"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/buses_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/n0_of_buses_txt"
                        android:textColor="#FFFFFF"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/bus_stats_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#959179"
                android:padding="20dp"
                android:text="@string/txt_check_bus_stats" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="25dp">

            <Button
                android:id="@+id/routes_stats_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#959179"
                android:padding="20dp"
                android:text="@string/txt_check_route_stats" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>